2002-01-25  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-highlight-current-anchor): Don't search for the anchor
	points which are out of sight.

2002-01-25  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-vinelinux.el (shimbun-make-contents): Modify regexp
	slightly.

2002-01-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-tmp-urluser-alist): New variable.
	(w3m-goto-url): If URL include user and passwd, set
	`w3m-tmp-urluser-alist' for process handling.
	Remove passwd from URL.
	(w3m): Remove passwd from URL when insert it in buffer.

	* w3m-util.el (w3m-get-user-passwd-from-url)
	(w3m-remove-passwd-from-url): New functions.

	* w3m-proc.el (top): Define `w3m-tmp-urluser-alist' to avoid
	byte-compile warning.
	(w3m-process-start-process): If URL include user or passwd, set
	them to default values.
	(w3m-process-filter): Use default values of `w3m-process-user' and
	`w3m-process-passwd'.
	(w3m-process-get-server-root): Remove `about://.../' from server
	root.

	* w3m-search.el (w3m-search): Insert default string in minibuffer.

2002-01-25  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-about-history): Don't add to history if url is nil.
	(w3m-print-this-url-after-command): Call
	`w3m-highlight-current-anchor'.
	(w3m-delete-all-overlays): New macro.
	(w3m-highlight-current-anchor): New function.
	(w3m-current-anchor-face): New face.
	(w3m-arrived-anchor-face): Removed underline property.
	(w3m-anchor-face): Ditto.

2002-01-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun): New customize group and
	all customize variable use this.

2002-01-18  OHASHI Akira  <bg66@koka-in.org>

	* w3m.el (w3m-header-line-map): Inherit `w3m-mode-map'.

2002-01-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-e21.el (w3m-setup-favicon): Reversed the condition that
	decide whether favicons are used.

2002-01-15  Hideyuki SHIRAI  <shirai@meadowy.org>
