@@ -64,21 +64,23 @@
 	  (delete-region (point-min) (point-max))
 	  (shimbun-retrieve-url (cdr elem) t)
 	  (goto-char (point-min))
-	  (when (re-search-forward
-		 "<A[^>]*HREF=\"mail\\([0-9]+\\)\\.html\">\\[?Last Page\\]?</A>"
-		 nil t)
-	    (let ((aux (string-to-number (match-string 1)))
-		  url)
-	      (while (> aux 0)
-		(setq url (if (= aux 1)
-			      (cdr elem)
-			    (shimbun-expand-url (format "mail%d.html" aux) (cdr elem))))
-		(delete-region (point-min) (point-max))
-		(shimbun-retrieve-url url)
-		(unless (if pages (<= (incf count) pages) t)
-		  (throw 'stop headers))
-		(shimbun-mhonarc-get-headers shimbun url headers (car elem))
-		(setq aux (1- aux))))))
+	  (if (re-search-forward
+	       "<A[^>]*HREF=\"mail\\([0-9]+\\)\\.html\">\\[?Last Page\\]?</A>"
+	       nil t)
+	      (let ((aux (string-to-number (match-string 1)))
+		    url)
+		(while (> aux 0)
+		  (setq url (if (= aux 1)
+				(cdr elem)
+			      (shimbun-expand-url (format "mail%d.html" aux) (cdr elem))))
+		  (delete-region (point-min) (point-max))
+		  (shimbun-retrieve-url url)
+		  (unless (if pages (<= (incf count) pages) t)
+		    (throw 'stop headers))
+		  (shimbun-mhonarc-get-headers shimbun url headers (car elem))
+		  (setq aux (1- aux))))
+	    (shimbun-mhonarc-get-headers shimbun (cdr elem)
+					 headers (car elem))))
 	headers))))
 
 (provide 'sb-meadow)
