@@ -1,3 +1,8 @@
+2002-01-29  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* shimbun/sb-meadow.el (shimbun-headers): Fixed problem when
+	yearly index is one page.
+
 2002-01-25  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* w3m.el (w3m-highlight-current-anchor): Don't search for the anchor
